--- a/guestbook/guestbook-sample.yaml
+++ b/guestbook/guestbook-sample.yaml
@@ -2,6 +2,7 @@ apiVersion: webapp.vijtrip2/v1
 kind: Guestbook
 metadata:
   name: guestbook-flux-sample
+  namespace: demo
 spec:
   updates: oldvalue
   foo: bar
