--- a/guestbook/guestbook-sample.yaml
+++ b/guestbook/guestbook-sample.yaml
@@ -2,7 +2,7 @@ apiVersion: webapp.vijtrip2/v1
 kind: Guestbook
 metadata:
   name: guestbook-flux-sample
-  namespace: demo
+  namespace: guestbook-system
 spec:
   updates: oldvalue
   foo: bar
